// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`height budget across columns (§2.2 × §19.3: rows 8/12/24/40/50 × columns 40/80/120) > columns=40: the normalised session first frame matches its snapshot 1`] = `
"[run] jevcode session · proj | step 0/–
starting
────────────────────────────────────────
> Describe the task…   / commands · @ f…
idle                    step 0/–  ? help"
`;

exports[`height budget across columns (§2.2 × §19.3: rows 8/12/24/40/50 × columns 40/80/120) > columns=80: the normalised session first frame matches its snapshot 1`] = `
"[run] jevcode session · proj | step 0/– starting
────────────────────────────────────────────────────────────────────────────────
> Describe the task…   / commands · @ files · ? help · Enter runs
idle                                                            step 0/–  ? help"
`;

exports[`height budget across columns (§2.2 × §19.3: rows 8/12/24/40/50 × columns 40/80/120) > columns=120: the normalised session first frame matches its snapshot 1`] = `
"[run] jevcode session · proj | step 0/– starting
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> Describe the task…   / commands · @ files · ? help · Enter runs
idle                                                                                                    step 0/–  ? help"
`;
